2013-07-20  Glenn Morris  <rgm@gnu.org>

	* progmodes/gdb-mi.el (gdb-delete-handler, gdb-stopped):
	Let `message' do the formatting.
	(def-gdb-preempt-display-buffer): Add explicit format.

	* image-dired.el (image-dired-track-original-file):
	Avoid changing point of wrong window.  (Bug#14909)

2013-07-20  Richard Copley  <rcopley@gmail.com>  (tiny change)

	* progmodes/gdb-mi.el (gdb-done-or-error):
	Guard against "%" in gdb output.  (Bug#14127)

2013-07-20  Andreas Schwab  <schwab@linux-m68k.org>

	* progmodes/sh-script.el (sh-read-variable): Remove interactive
	spec.  (Bug#14826)

	* international/mule.el (coding-system-iso-2022-flags): Fix last
	change.

2013-07-20  Kenichi Handa  <handa@gnu.org>

	* international/mule.el (coding-system-iso-2022-flags): Add
	`8-bit-level-4'.  (Bug#8522)

2013-07-19  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* net/shr.el (shr-mouse-browse-url): New command and keystroke
	(bug#14815).

	* net/eww.el (eww-process-text-input): Allow inputting when the
	point is at the start of the line, as the properties aren't
	front-sticky.

	* net/shr.el (shr-make-table-1): Ensure that we don't infloop on
	degenerate widths.

2013-07-19  Richard Stallman  <rms@gnu.org>

	* epa.el (epa-popup-info-window): Doc fix.

	* subr.el (split-string): New arg TRIM.

2013-07-18  Juanma Barranquero  <lekktu@gmail.com>

	* frame.el (blink-cursor-timer-function, blink-cursor-suspend):
	Add check for W32 (followup to revno:113431).

2013-07-18  Michael Albinus  <michael.albinus@gmx.de>

	* filenotify.el (file-notify--library): Rename from
	`file-notify-support'.  Do not autoload.  Adapt all uses.
	(file-notify-supported-p): New defun.

	* autorevert.el (auto-revert-use-notify):
	Use `file-notify-supported-p' instead of `file-notify-support'.
	Adapt docstring.
	(auto-revert-notify-add-watch): Use `file-notify-supported-p'.

	* net/tramp.el (tramp-file-name-for-operation):
	Add `file-notify-supported-p'.
