@@ -5,6 +5,11 @@
 	(def-gdb-preempt-display-buffer): Add explicit format.
 
 	* image-dired.el (image-dired-track-original-file):
+	Use with-current-buffer.
+	(image-dired-track-thumbnail): Use with-current-buffer.
+	Avoid changing point of wrong window.
+
+	* image-dired.el (image-dired-track-original-file):
 	Avoid changing point of wrong window.  (Bug#14909)
 
 2013-07-20  Richard Copley  <rcopley@gmail.com>  (tiny change)
